@@ -15,7 +15,7 @@ You can post suggestions or bug reports in the discussions using English or Chin
 The mod is completely open source, you are welcome to help improve the mod, and use the mod to learn mod creation.
 
 See more information in Documentation.txt in mod folder.</description>
-    <version>12.3.4</version>
+    <version>12.3.5</version>
     <visibility>Public</visibility>
     <tag id="Lua"/>
     <tag id="Items"/>
